translation-tool/inputs/source_meta/objects/CP_CommunicationPreferencesMaster__mdt.object
<CustomObject>
    <description>This meta Data type is used for storing communication preference system config table.</description>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ConsumerVAR</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                    <isActive>false</isActive>
                    <label>SOHO</label>
                </value>
                <value>
                    <fullName>VAR</fullName>
                    <isActive>true</isActive>
                    <label>VAR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPAccount_Type__c</fullName>
        <description>Using Text field with semicolon separation for Account Type in order to use for multiple Account types.</description>
        <label>CPAccount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPAvailable_for_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPAvailable_for_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPCall__c</fullName>
        <label>Call</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always ON</fullName>
                    <default>true</default>
                    <label>Always ON</label>
                </value>
                <value>
                    <fullName>Default ON</fullName>
                </value>
                <value>
                    <fullName>Default OFF</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPCase_Template__c</fullName>
        <label>Case Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPCategoryOrder__c</fullName>
        <label>CPCategoryOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPCategory__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Products and Services</fullName>
                </value>
                <value>
                    <fullName>Special Offers</fullName>
                </value>
                <value>
                    <fullName>Usage Information</fullName>
                </value>
                <value>
                    <fullName>Billing Notifications</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
                <value>
                    <fullName>Service Related Notifications</fullName>
                </value>
                <value>
                    <fullName>Account Information</fullName>
                </value>
                <value>
                    <fullName>Service Updates</fullName>
                </value>
                <value>
                    <fullName>Marketing Communication Preferences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPEmail_Template_ID__c</fullName>
        <label>Email Template Name_X</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPEmail__c</fullName>
        <label>Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>By Default</fullName>
                </value>
                <value>
                    <fullName>Possible Option</fullName>
                </value>
                <value>
                    <fullName>Default OFF</fullName>
                </value>
                <value>
                    <fullName>Default ON</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Always ON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPEventCode__c</fullName>
        <label>CPEventCode_X</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPIn_Browser_Notifications__c</fullName>
        <label>In Browser Notifications</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always ON</fullName>
                    <default>true</default>
                    <label>Always ON</label>
                </value>
                <value>
                    <fullName>Default ON</fullName>
                </value>
                <value>
                    <fullName>Default OFF</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPMail__c</fullName>
        <label>Mail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>By Default</fullName>
                </value>
                <value>
                    <fullName>Possible Option</fullName>
                </value>
                <value>
                    <fullName>Always ON</fullName>
                </value>
                <value>
                    <fullName>Default ON</fullName>
                </value>
                <value>
                    <fullName>Default OFF</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPMobile_In_App_Notifications__c</fullName>
        <label>Mobile In-App  Notifications</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always ON</fullName>
                    <default>true</default>
                    <label>Always ON</label>
                </value>
                <value>
                    <fullName>Default ON</fullName>
                </value>
                <value>
                    <fullName>Default OFF</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPMobile_Push_Notifications__c</fullName>
        <label>Mobile Push Notifications</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always ON</fullName>
                    <default>true</default>
                    <label>Always ON</label>
                </value>
                <value>
                    <fullName>Default ON</fullName>
                </value>
                <value>
                    <fullName>Default OFF</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPNotification_Description__c</fullName>
        <label>Notification Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPNotification_Factor_Contact__c</fullName>
        <label>Notification Factor Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPNotification_Id__c</fullName>
        <label>Notification Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CPNotification_Name__c</fullName>
        <label>Notification Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Receive a Notification when Billing Statement has been Generated</fullName>
                </value>
                <value>
                    <fullName>Set a billing reminder that bill is due in</fullName>
                </value>
                <value>
                    <fullName>Receive a real time alert when all of plan data has been used</fullName>
                </value>
                <value>
                    <fullName>Receive a real time alert when 10% plan data remaining</fullName>
                </value>
                <value>
                    <fullName>Notification and alerts about HughesNet Service</fullName>
                </value>
                <value>
                    <fullName>Notification and alerts on New Service Plan and Products available through HughesNet. Also receive tips to enhance Products already have</fullName>
                </value>
                <value>
                    <fullName>Receive Promotions, specials and offers</fullName>
                </value>
                <value>
                    <fullName>Receive a real time alert when 25% plan data remaining</fullName>
                </value>
                <value>
                    <fullName>Receive Marketing Notification and Alerts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPNotificationsOrder__c</fullName>
        <label>CPNotificationsOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPSMS_Template_ID__c</fullName>
        <label>SMS Template Name_X</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPSMS__c</fullName>
        <label>SMS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>By Default</fullName>
                </value>
                <value>
                    <fullName>Possible Option</fullName>
                </value>
                <value>
                    <fullName>Default ON</fullName>
                </value>
                <value>
                    <fullName>Default OFF</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Always ON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Preference_Field_API_name__c</fullName>
        <label>Contact Preference Field API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                    <default>true</default>
                    <label>CO</label>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Communication Preferences Master</label>
    <pluralLabel>Communication Preferences</pluralLabel>
</CustomObject>